--- a/SporpingBike/package.json
+++ b/SporpingBike/package.json
@@ -9,20 +9,20 @@
     "bike"
   ],
   "dependencies": {
-    "async": "latest",
-    "body-parser": "latest",
-    "bootstrap": "latest",
-    "compression": "latest",
-    "exif-js": "latest",
-    "express": "latest",
-    "image-type": "latest",
-    "mongodb": "latest",
-    "multer": "latest",
-    "ng-file-upload": "latest",
-    "nodemailer": "latest",
-    "passport": "latest",
-    "passport-http": "latest",
-    "read-chunk": "latest"
+    "async": "1.5.x",
+    "body-parser": "1.14.x",
+    "bootstrap": "3.3.x",
+    "compression": "1.6.x",
+    "exif-js": "2.1.x",
+    "express": "4.13.x",
+    "image-type": "2.1.x",
+    "mongodb": "2.0.x",
+    "multer": "1.1.x",
+    "ng-file-upload": "10.1.x",
+    "nodemailer": "1.10.x",
+    "passport": "0.3.x",
+    "passport-http": "0.3.x",
+    "read-chunk": "1.0.x"
   },
   "private": true,
   "engines": {
